Fixed lombok dependency error